unpackaged/main/default/objects/Discovered_Opportunity_Snapshot__c/Discovered_Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <description>For Opportunity analytical snapshot from stage 3 - stage 8. A point of time every Friday.</description>
    <label>Discovered Opportunity Snapshot</label>
    <nameField>
        <label>Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovered Opportunity Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>