unpackaged/main/default/objects/Discovered_Opportunity_Snapshot__c/fields/Country_Area__c.field-meta.xml
<CustomField>
    <fullName>Country_Area__c</fullName>
    <label>Country/Area</label>
    <length>40</length>
    <type>Text</type>
</CustomField>