unpackaged/main/default/objects/Discovered_Opportunity_Snapshot__c/fields/Forecast_Level__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Level__c</fullName>
    <label>Forecast Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>