unpackaged/main/default/objects/Discovered_Opportunity_Snapshot__c/fields/Group_Region__c.field-meta.xml
<CustomField>
    <fullName>Group_Region__c</fullName>
    <label>Group Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>