unpackaged/main/default/objects/Discovered_Opportunity_Snapshot__c/fields/Sub_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sub_Territory__c</fullName>
    <label>Sub Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1D - 1</fullName>
            </value>
            <value>
                <fullName>T1D - 2</fullName>
            </value>
            <value>
                <fullName>T1D - 3</fullName>
            </value>
            <value>
                <fullName>T1D - 4</fullName>
            </value>
            <value>
                <fullName>T1D - 5</fullName>
            </value>
            <value>
                <fullName>T1D - 6</fullName>
            </value>
            <value>
                <fullName>T1D - 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>