unpackaged/main/default/objects/Discovered_Opportunity_Snapshot__c/fields/T1_Industry__c.field-meta.xml
<CustomField>
    <fullName>T1_Industry__c</fullName>
    <label>Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>